Closed Bug 359518 Opened 18 years ago Closed 18 years ago

Gmail , |empty trash now| selects a lot of text before deleting the messages

Categories

(Core :: Widget: Win32, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Peter6, Assigned: emaijala+moz)

References

Details

(Keywords: platform-parity, regression, testcase)

Attachments

(3 files)

Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20061104 Minefield/3.0a1 ID:2006110403 [cairo]

repro:

op gmail
delete a few messages
go to the Trash folder
press on the link [Empty Trash now]

result:
The messages, including the text and more are selected (highlighted) before they are deleted (see att)
Attached image screenshot
Summary: Gmail , empty trash now selects a lot of text before deleting the messages → Gmail , |empty trash now| selects a lot of text before deleting the messages
Same here on Win XP:

Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061104 Minefield/3.0a1 - Build ID: 2006110404

OS -> All?
same result with a 20061103 reflow branch build
Attached file testcase
Sorry for the delay, actually, it took me a while to figure out what the problem was.
Product: Firefox → Core
oops
Product: Core → Firefox
This regressed between 2005-12-01 and 2005-12-02:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2005-12-01+05&maxdate=2005-12-02+07&cvsroot=%2Fcvsroot
I suspect a regression from bug 312566, which means this isn't a problem on linux/mac platform (Adam, can you confirm this is not a problem on linux?).
Assignee: nobody → js-console
Blocks: 312566
Component: General → Error Console
Flags: blocking1.9?
Keywords: regression, testcase
Product: Firefox → Core
QA Contact: general → error-console
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20061108 Minefield/3.0a1

Yup, I cannot reproduce this on Linux trunk using Martijn's testcase.
Assignee: js-console → win32
Component: Error Console → Widget: Win32
Keywords: pp
QA Contact: error-console → ian
Attached patch Patch v1Splinter Review
Here is a fix. Releasing mouse capture upon receiving WM_CANCELMODE was a bad idea.
Attachment #245713 - Flags: superreview?(roc)
Attachment #245713 - Flags: review?(roc)
Attachment #245713 - Flags: superreview?(roc)
Attachment #245713 - Flags: superreview+
Attachment #245713 - Flags: review?(roc)
Attachment #245713 - Flags: review+
Assignee: win32 → emaijala
Fix checked in to trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: