Patch for bug 359518: Gmail , |empty trash now| selects a lot of text before deleting the messages r/sr=roc